# cr3bp-stability

./: .gitignore  CMakeLists.txt  README.md  TROUBLESHOOT.md  compare_csv.py  debug.sh  model_test.py
benchmark_output/Dormand-Prince-5/distant_retrograde/: bw.csv  fw.csv  hamiltonian_error.csv
benchmark_output/Dormand-Prince-5/gateway_L2_northern/: bw.csv  fw.csv  fw_bw.csv  hamiltonian_error.csv
benchmark_output/Dormand-Prince-5/gateway_L2_southern/: bw.csv  fw.csv  hamiltonian_error.csv
benchmark_output/Dormand-Prince-5/halo_stable/: bw.csv  fw.csv  fw_1.csv  fw_bw.csv  hamiltonian_error.csv
benchmark_output/Dormand-Prince-5/halo_unstable/: bw.csv  bw_1.csv  fw.csv  hamiltonian_error.csv
benchmark_output/Dormand-Prince-5/orbit_above/: estimated_surrogate.csv  exact_and_estimated_surrogate.csv
benchmark_output/Dormand-Prince-5/orbit_right/: estimated_surrogate.csv  exact_and_estimated_surrogate.csv
benchmark_output/Dormand-Prince-5/transfer_orbit/: bw.csv  fw.csv  hamiltonian_error.csv
benchmark_output/Fehlberg-78/gateway_L2_southern/: fw_bw.csv  hamiltonian_error.csv
benchmark_output/Fehlberg-78/halo_unstable/: bw_1.csv  hamiltonian_error.csv
benchmark_output/Fehlberg-78/orbit_above/: estimated_surrogate.csv  exact_and_estimated_surrogate.csv  exact_surrogate.csv
benchmark_output/Fehlberg-78/orbit_right/: estimated_surrogate.csv  exact_and_estimated_surrogate.csv  exact_surrogate.csv
benchmark_output/Heyoka/distant_retrograde/: bw.csv  fw.csv  hamiltonian_error.csv
benchmark_output/Heyoka/gateway_L2_northern/: bw.csv  fw.csv  fw_1.csv  hamiltonian_error.csv
benchmark_output/Heyoka/gateway_L2_southern/: bw.csv  fw.csv  fw_1.csv  hamiltonian_error.csv
benchmark_output/Heyoka/halo_stable/: bw.csv  fw.csv  hamiltonian_error.csv
benchmark_output/Heyoka/halo_unstable/: bw.csv  fw.csv  fw_1.csv  hamiltonian_error.csv
benchmark_output/Heyoka/orbit_above/: estimated_surrogate.csv  exact_and_estimated_surrogate.csv  exact_surrogate.csv
benchmark_output/Heyoka/orbit_right/: estimated_surrogate.csv  exact_and_estimated_surrogate.csv  exact_surrogate.csv
benchmark_output/Heyoka/transfer_orbit/: bw.csv  fw.csv  hamiltonian_error.csv
benchmark_output/bulirsch-stoer/distant_retrograde/: bw.csv  fw.csv  hamiltonian_error.csv
benchmark_output/bulirsch-stoer/gateway_L2_northern/: bw.csv  bw_1.csv  fw.csv  fw_1.csv  fw_bw.csv  hamiltonian_error.csv
benchmark_output/bulirsch-stoer/gateway_L2_southern/: bw.csv  bw_1.csv  fw.csv  fw_1.csv  fw_bw.csv  hamiltonian_error.csv
benchmark_output/bulirsch-stoer/halo_stable/: bw.csv  bw_1.csv  fw.csv  fw_bw.csv  hamiltonian_error.csv
benchmark_output/bulirsch-stoer/halo_unstable/: bw.csv  bw_1.csv  fw.csv  fw_1.csv  fw_bw.csv  hamiltonian_error.csv
benchmark_output/bulirsch-stoer/orbit_above/: estimated_surrogate.csv  exact_surrogate.csv
benchmark_output/bulirsch-stoer/orbit_right/: estimated_surrogate.csv  exact_surrogate.csv
benchmark_output/bulirsch-stoer/transfer_orbit/: bw.csv  fw.csv  hamiltonian_error.csv
benchmark_output/fehlberg78/distant_retrograde/: bw.csv  fw.csv  hamiltonian_error.csv
benchmark_output/fehlberg78/gateway_L2_northern/: fw.csv  hamiltonian_error.csv
examples/: CR3BP.cpp  CR3BP_euler.cpp  CR3BP_rk.cpp  RK-test.cpp  main.cpp  test.cpp
include/: dbg.h  explicit-runge-kutta.h  integrator.h  ode.h  runge-kutta.h
include/benchmark/: benchmark_namespace.h  hamiltonian.h  roundtrip_closure.h  run-benchmark.h  surrogate.h  surrogate_L1.h  surrogate_P1.h  utility.h
include/cfg/: benchmark-hyper-parameters.h
include/covariance-propagation/: unscented-transform.h
include/integrator/: adaptive-explicit-runge-kutta.h  adaptive-implicit-runge-kutta.h  explicit-runge-kutta.h  implicit-runge-kutta.h  integrator.h  runge-kutta.h
include/model/: CR3BP.h  cr3bp_heyoka_expressions.h
orbits/: periodic_orbits_vertical.csv
src/: CR3BP_euler.cpp  CR3BP_heyoka.cpp  CR3BP_rk.cpp  CR3BP_vgl.cpp  Shampire-Gordin.cpp  Strömer-Cowell.cpp  boost_odeint.cpp  ode.c  parse_orbit_csv.cpp  test-adaptive.cpp  test-heyoka-cr3bp-impl.cpp
src/benchmark/: DP5-benchmark.cpp  DP5.cpp  bulirsch-stoer-benchmark.cpp  bulirsch_stoer.cpp  fehlberg78-benchmark.cpp  fehlberg78.cpp  heyoka-benchmark.cpp
visualization/: CMakeCache.txt  Makefile  benchmark-DP5  benchmark-fehlberg78  cmake_install.cmake  correlation_coefficient.py  generate_plots.sh  plot.py  plot_error.py  plot_orbit.py  plot_results.py  plot_results_file.py  plot_trajectory.py  plot_trajectory_file.py
(+12 files in other folders)
